# coffee-deforestation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: aois.yaml  pipeline.yaml
docs/: index.html  map_huila.html  map_sul_de_minas.html  report_huila.html  report_lam_dong.html  report_sul_de_minas.html
documentation/: architecture.md  extending.md  getting-started.md  methodology.md
notebooks/: 01_quickstart.ipynb  02_data_exploration.ipynb  03_ml_training.ipynb  04_reporting.ipynb
outputs/rasters/: classification_huila.tif  classification_lam_dong.tif  classification_sul_de_minas.tif  coffee_prob_huila.tif  coffee_prob_lam_dong.tif  coffee_prob_sul_de_minas.tif
outputs/reports/: report_huila.html  report_huila.md  report_lam_dong.html  report_lam_dong.md  report_sul_de_minas.html  report_sul_de_minas.md  synthesis.html
outputs/stats/: summary_huila.json  (+2 more)
scripts/: build_global_map.py  clear_cache.py  generate_global_map.py  generate_maps.py  generate_report.py  generate_reports.py  query_hotspots.py  run_all.py  run_aoi.py  run_full_analysis.py  validate_aois.py
tests/: conftest.py  test_cache.py  test_cache_decorator.py  test_change.py  test_config.py  test_features.py  test_features_mocked.py  test_gee_mocked.py  test_hotspots.py  test_interactive_map.py  test_labels.py  test_llm_dry_run.py  test_logging.py  test_ml.py  test_pipeline_smoke.py  test_reporting.py  test_reporting_stage3.py  test_stage2_coverage.py  test_stage2_viz.py  test_stage4.py  test_stage5.py  test_stats_schema.py  test_summarize.py  test_viz.py
(+45 files in other folders)
